# judge-vs-react

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conftest.py
docs/: prior-art-fulltext.md
eval/pit/: analyze.py  config.py  run_aim_sweep.py  run_oracle_sweep.py  run_vlm.py
eval/pit/data/: aim_sweep.jsonl  oracle_repeat_sweep.jsonl  oracle_sweep.jsonl  perception_judgments.jsonl  vlm_latency.jsonl  vlm_runs.jsonl
eval/pit/realmodel/: README.md  battery.py  battery_v4_high.json  boundary_sweep.py  fig_realmodel.py  sonnet_boundary_sweep.jsonl  sweep_agent.py
eval/pit/tests/: test_aim_sweep.py  test_config.py  test_fits.py  test_oracle_sweep.py  test_paper_numbers.py  test_run_vlm_episode.py  test_vlm_latency_parse.py
paper/: README.md  blog.md  judge-vs-react.md  judge-vs-react.tex  make-arxiv.sh
raycaster/: CMakeLists.txt  pit_agent.py
raycaster/demo/: README.md
raycaster/src/: agent.c  agent.h  aim.c  aim.h  episode.c  episode.h  main.c  map.c  map.h  ray.c  ray.h  render.c  render.h
raycaster/tests/: test_agent_episode.sh  test_aim.sh  test_delay.sh  test_episode.sh  test_window_consistency.sh
